Fix layout issue

--- a/source/stylesheets/_partial/layout.scss
+++ b/source/stylesheets/_partial/layout.scss
@@ -37,7 +37,7 @@
     }
     @media screen and (min-width: 1025px) {
         margin-left: 0px !important;
-        width: 60%;
+        width: 65%;
         padding: 80px 10px;
     }
 }
