--- a/source/stylesheets/_partial/post.scss
+++ b/source/stylesheets/_partial/post.scss
@@ -35,6 +35,8 @@
     background-color: #FFFFFF;
     box-shadow: 0 1px 1px 0 rgba(0,0,0,.2);
     -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,.2);
+    max-width: -moz-available;
+    max-width: -webkit-fill-available;
     @media screen and (min-width: 1025px) {
         padding: 40px;
     }
